System refactoring, add rec prefix and command, remove metrics, update checker